<resources>
    <string name="app_name">Tender</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <string name="navigation_drawer_main">首页</string>
    <string name="navigation_drawer_companies">企业信息</string>
    <string name="navigation_drawer_staff">人员信息</string>
    <string name="navigation_drawer_projects">项目信息</string>
    <string name="navigation_drawer_credits">信誉</string>
    <string name="navigation_drawer_links">行业链接</string>
    <string name="navigation_drawer_help">帮助</string>
    <string name="navigation_drawer_about">关于</string>

    <string name="login_name">邮箱/手机号码</string>
    <string name="login_password">密码</string>
    <string name="login_sign_in">登陆</string>
    <string name="login_title">登陆</string>

    <string name="signup_verification">验证码</string>
    <string name="signup_title">注册</string>
    <string name="signup">注册</string>
    <string name="get_verification_code">获得验证码</string>

    <string name="search">search</string>

    <string name="company_detail_title">企业详情</string>
    <string name="company_cert_detail_title">企业资质详情</string>
    <string name="staff_detail_title">员工详情</string>
    <string name="staff_cert_detail_title">员工证书详情</string>
    <string name="staff_achievement_detail_title">个人业绩详情</string>
    <string name="project_detail_title">项目详情</string>

    <string name="confirm">确定</string>
    <string name="no_content">No content</string>

    <string name="company_search_title">企业搜索</string>
    <string name="company_search_people">法人</string>
    <string name="company_search_name">企业名称</string>
    <string name="company_search_manager">董事</string>
    <string name="company_search_address">联系方式</string>
    <string name="company_search_constructor">建造师</string>
    <string name="company_search_supervisor">监事</string>
    <string name="company_search_executive">高管</string>
    <string name="company_search_type">类型</string>
    <string name="company_search_level">级别</string>
    <string name="company_search_location">地区</string>
    <string name="company_search_funding">资金</string>

    <string name="company_detail_id">ID</string>
    <string name="company_detail_name">企业名称</string>
    <string name="company_detail_code">代码</string>
    <string name="company_detail_license">证书</string>
    <string name="company_detail_register_location">注册地点</string>
    <string name="company_detail_operating_location">工作地点</string>
    <string name="company_detail_people">法人</string>
    <string name="company_detail_type">类型</string>
    <string name="company_detail_cert_id">证书ID</string>
    <string name="company_detail_security_cert_id">安全证书ID</string>
    <string name="company_detail_cert_expire">有效期</string>
    <string name="company_detail_capital">注册资金</string>
    <string name="company_detail_certs">企业资质</string>
    <string name="company_detail_staff">注册人员</string>
    <string name="company_detail_projects">工程项目</string>
    <string name="company_detail_organization_code">组织代码</string>

    <string name="staff_search_title">人员搜索</string>
    <string name="staff_search_name">姓名</string>
    <string name="staff_search_registration_id">注册证号</string>
    <string name="staff_search_id">身份证号</string>
    <string name="staff_search_registration_company">注册单位</string>
    <string name="staff_search_gender">性别</string>
    <string name="staff_search_type">类别</string>

    <string name="staff_detail_id">ID</string>
    <string name="staff_detail_name">姓名</string>
    <string name="staff_detail_identification">身份证号</string>
    <string name="staff_detail_gender">性别</string>
    <string name="staff_detail_type">类别</string>
    <string name="staff_detail_level">级别</string>
    <string name="staff_detail_specialty">技能</string>
    <string name="staff_detail_seal_id">印章ID</string>
    <string name="staff_detail_seal_register_date">注册日期</string>
    <string name="staff_detail_expire_date">有效期</string>
    <string name="staff_detail_status">状态</string>
    <string name="staff_detail_company_name">公司名称</string>
    <string name="staff_detail_cert">证件信息</string>
    <string name="staff_detail_achievements">个人业绩</string>
    <string name="staff_detail_edu">教育背景</string>
    <string name="staff_detail_degree">等级</string>
    <string name="staff_detail_safe_id">安全生产证书ID</string>
    <string name="staff_detail_achi_num">成就数</string>
    <string name="staff_detail_cert_num">证书数</string>

    <string name="staff_cert_detail_type">类别</string>
    <string name="staff_cert_detail_staff">员工</string>
    <string name="staff_cert_detail_specialty">工种</string>
    <string name="staff_cert_detail_organization">组织</string>
    <string name="staff_cert_detail_cert_id">证书ID</string>
    <string name="staff_cert_detail_seal_id">印章ID</string>
    <string name="staff_cert_detail_register_date">注册日期</string>
    <string name="staff_cert_detail_expire_date">有效期</string>

    <string name="staff_achi_detail_staff">员工</string>
    <string name="staff_achi_detail_role">角色</string>
    <string name="staff_achi_detail_project">项目</string>
    <string name="staff_achi_detail_customer">客户机构</string>
    <string name="staff_achi_detail_status">状态</string>
    <string name="staff_achi_detail_category">分类</string>

    <string name="project_search_title">项目搜索</string>
    <string name="project_search_name">项目名称</string>
    <string name="project_search_company">单位名称</string>
    <string name="project_search_staff">项目人员</string>
    <string name="project_search_location">地区</string>
    <string name="project_search_price">合同金额</string>
    <string name="project_search_type">项目类型</string>
    <string name="project_search_status">项目状态</string>
    <string name="project_search_time">时间</string>
    <string name="project_search_source">资金来源</string>
    <string name="project_search_judge_method">评价方法</string>

    <string name="project_detail_id">ID</string>
    <string name="project_detail_name">项目名称</string>
    <string name="project_detail_location">项目地点</string>
    <string name="project_detail_customer_organization">客户组织</string>
    <string name="project_detail_project_number">项目代码</string>
    <string name="project_detail_type">项目类型</string>
    <string name="project_detail_company">公司</string>
    <string name="project_detail_scale">规模</string>
    <string name="project_detail_section">部门</string>
    <string name="project_detail_section_scale">部门规模</string>
    <string name="project_detail_construction">建造机构</string>
    <string name="project_detail_bidding_record">投标记录</string>
    <string name="project_detail_contract_record">合同记录</string>
    <string name="project_detail_construction_permission_num">建造许可号</string>
    <string name="project_detail_construction_permission_date">建造许可日期</string>
    <string name="project_detail_finished_record">完成记录</string>
    <string name="project_detail_sub_contract">附属合同</string>

    <string name="cert_detail_ID">ID</string>
    <string name="cert_detail_name">名称</string>
    <string name="cert_detail_type">资质类型</string>
    <string name="cert_detail_cert_id">证书ID</string>
    <string name="cert_detail_issue_date">颁发日期</string>
    <string name="cert_detail_expire_date">有效期</string>
    <string name="cert_detail_issuer">颁发机构</string>

    <string name="detail_filter">筛选条件</string>
    <string name="detail_order">排序</string>
    <string name="detail_order_ascending">升序</string>
    <string name="detail_order_descending">降序</string>
    <string name="detail_order_none">无序</string>

    <string name="logout">注销登录</string>
    <string name="logout_message">你确定要注销登陆吗？</string>

    <string name="anonymous">匿名</string>
    <string name="anonymous_email">无信息</string>

    <string name="dialog_staffs">员工列表</string>
    <string name="dialog_projects">工程列表</string>

    <string name="list_1_more">%1$s 等</string>

    <string name="company_like">like / unlike</string>
    <string name="company_like_num">Like Number</string>
    <string name="company_like_show_in_map">在地图中打开</string>
    <string name="company_like_share">分享</string>
</resources>
