<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:id="@+id/nav_top" android:checkableBehavior="single">
        <item
            android:id="@+id/nav_main"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/navigation_drawer_main"
            android:visible="false"/>
        <item
            android:id="@+id/nav_company"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/navigation_drawer_companies"/>
        <item
            android:id="@+id/nav_staff"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/navigation_drawer_staff"/>
        <item
            android:id="@+id/nav_projects"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/navigation_drawer_projects"/>
        <item
            android:id="@+id/nav_links"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/navigation_drawer_links"
            android:visible="false"/>
    </group>


    <group android:id="@+id/nav_bottom" android:checkableBehavior="none">
        <item
            android:id="@+id/nav_help"
            android:title="@string/navigation_drawer_help"/>
        <item
            android:id="@+id/nav_about"
            android:title="@string/navigation_drawer_about"/>
    </group>

</menu>
