<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:app="http://schemas.android.com/apk/res-auto">
    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

        <android.support.design.widget.AppBarLayout android:id="@+id/appBarLayout"
                                                    android:layout_width="match_parent"
                                                    android:layout_height="wrap_content"
                                                    android:theme="@style/AppTheme.AppBarOverlay">
            <android.support.v7.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:background="?attr/colorPrimary"
                app:popupTheme="@style/AppTheme.PopupOverlay">
            </android.support.v7.widget.Toolbar>
        </android.support.design.widget.AppBarLayout>

        <ScrollView android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_below="@id/appBarLayout">


            <LinearLayout android:layout_width="match_parent"
                          android:layout_height="match_parent"
                          android:orientation="vertical"
                          android:paddingEnd="20dp"
                          android:paddingStart="20dp"
                          android:paddingTop="20dp">

                <TextView android:id="@+id/textView" android:layout_width="wrap_content"
                          android:layout_height="wrap_content"
                          android:layout_marginTop="10dp"
                          android:text="@string/detail_filter" android:textSize="18sp"/>

                <LinearLayout android:layout_width="match_parent"
                              android:layout_height="wrap_content"
                              android:orientation="vertical"
                              android:paddingEnd="10dp"
                              android:paddingStart="10dp">
                    <LinearLayout android:layout_width="match_parent"
                                  android:layout_height="wrap_content"
                                  android:orientation="horizontal">
                        <TextView style="@style/SearchAttribute"
                                  android:text="@string/project_search_name"/>
                        <EditText android:id="@+id/name" style="@style/SearchActivityEditTextStyle"
                                  android:layout_width="match_parent"
                                  android:layout_height="wrap_content"/>
                    </LinearLayout>
                    <LinearLayout android:layout_width="match_parent"
                                  android:layout_height="wrap_content"
                                  android:orientation="horizontal">
                        <TextView style="@style/SearchAttribute"
                                  android:text="@string/project_search_company"/>
                        <EditText android:id="@+id/company"
                                  style="@style/SearchActivityEditTextStyle"
                                  android:layout_width="match_parent"
                                  android:layout_height="wrap_content"/>
                    </LinearLayout>
                    <LinearLayout android:layout_width="match_parent"
                                  android:layout_height="wrap_content"
                                  android:orientation="horizontal">
                        <TextView style="@style/SearchAttribute"
                                  android:text="@string/project_search_staff"/>
                        <EditText android:id="@+id/staff" style="@style/SearchActivityEditTextStyle"
                                  android:layout_width="match_parent"
                                  android:layout_height="wrap_content"/>
                    </LinearLayout>
                    <LinearLayout android:layout_width="match_parent"
                                  android:layout_height="wrap_content"
                                  android:orientation="horizontal">
                        <TextView style="@style/SearchAttribute"
                                  android:text="@string/project_search_location"/>
                        <EditText android:id="@+id/location"
                                  style="@style/SearchActivityEditTextStyle"
                                  android:layout_width="match_parent"
                                  android:layout_height="wrap_content"/>
                    </LinearLayout>
                    <LinearLayout android:layout_width="match_parent"
                                  android:layout_height="wrap_content"
                                  android:orientation="horizontal">
                        <TextView style="@style/SearchAttribute"
                                  android:text="@string/project_search_price"/>
                        <EditText android:id="@+id/price" style="@style/SearchActivityEditTextStyle"
                                  android:layout_width="match_parent"
                                  android:layout_height="wrap_content"/>
                    </LinearLayout>
                    <LinearLayout android:layout_width="match_parent"
                                  android:layout_height="wrap_content"
                                  android:orientation="horizontal">
                        <TextView style="@style/SearchAttribute"
                                  android:text="@string/project_search_type"/>
                        <EditText android:id="@+id/type" style="@style/SearchActivityEditTextStyle"
                                  android:layout_width="match_parent"
                                  android:layout_height="wrap_content"/>
                    </LinearLayout>
                    <LinearLayout android:layout_width="match_parent"
                                  android:layout_height="wrap_content"
                                  android:orientation="horizontal">
                        <TextView style="@style/SearchAttribute"
                                  android:text="@string/project_search_time"/>
                        <EditText android:id="@+id/time" style="@style/SearchActivityEditTextStyle"
                                  android:layout_width="match_parent"
                                  android:layout_height="wrap_content"/>
                    </LinearLayout>
                    <LinearLayout android:layout_width="match_parent"
                                  android:layout_height="wrap_content"
                                  android:orientation="horizontal">
                        <TextView style="@style/SearchAttribute"
                                  android:text="@string/project_search_source"/>
                        <EditText android:id="@+id/source"
                                  style="@style/SearchActivityEditTextStyle"
                                  android:layout_width="match_parent"
                                  android:layout_height="wrap_content"/>
                    </LinearLayout>
                    <LinearLayout android:layout_width="match_parent"
                                  android:layout_height="wrap_content"
                                  android:orientation="horizontal">
                        <TextView style="@style/SearchAttribute"
                                  android:text="@string/project_search_judge_method"/>
                        <EditText android:id="@+id/judge" style="@style/SearchActivityEditTextStyle"
                                  android:layout_width="match_parent"
                                  android:layout_height="wrap_content"/>
                    </LinearLayout>
                </LinearLayout>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" android:layout_marginTop="20dp"
                    android:text="@string/detail_order"
                    android:textSize="18sp"/>

                <LinearLayout android:layout_width="match_parent"
                              android:layout_height="wrap_content"
                              android:orientation="vertical"
                              android:paddingBottom="50dp"
                              android:paddingEnd="10dp"
                              android:paddingStart="10dp">
                    <com.johnson.tender.view.DragListView
                        android:id="@+id/dragListView"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">
                    </com.johnson.tender.view.DragListView>
                </LinearLayout>
            </LinearLayout>
        </ScrollView>
    </RelativeLayout>
</layout>
