<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:app="http://schemas.android.com/apk/res-auto">
    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

        <android.support.design.widget.AppBarLayout android:id="@+id/appBarLayout"
                                                    android:layout_width="match_parent"
                                                    android:layout_height="wrap_content"
                                                    android:theme="@style/AppTheme.AppBarOverlay">
            <android.support.v7.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:background="?attr/colorPrimary"
                app:popupTheme="@style/AppTheme.PopupOverlay">

            </android.support.v7.widget.Toolbar>
        </android.support.design.widget.AppBarLayout>

        <LinearLayout android:layout_width="match_parent"
                      android:layout_height="match_parent"
                      android:layout_below="@+id/appBarLayout"
                      android:orientation="vertical"
                      android:paddingEnd="20dp"
                      android:paddingStart="20dp"
                      android:paddingTop="20dp">

            <TextView android:id="@+id/textView" android:layout_width="wrap_content"
                      android:layout_height="wrap_content"
                      android:text="@string/detail_filter" android:textSize="18sp"/>

            <LinearLayout android:layout_width="match_parent"
                          android:layout_height="wrap_content"
                          android:orientation="vertical"
                          android:paddingEnd="10dp"
                          android:paddingStart="10dp">
                <LinearLayout android:layout_width="match_parent"
                              android:layout_height="wrap_content"
                              android:orientation="horizontal">
                    <TextView style="@style/SearchAttribute"
                              android:text="@string/staff_search_id"/>
                    <EditText android:id="@+id/id" style="@style/SearchActivityEditTextStyle"
                              android:layout_width="match_parent"
                              android:layout_height="wrap_content"/>
                </LinearLayout>
                <LinearLayout android:layout_width="match_parent"
                              android:layout_height="wrap_content"
                              android:orientation="horizontal">
                    <TextView style="@style/SearchAttribute"
                              android:text="@string/staff_search_name"/>
                    <EditText android:id="@+id/name" style="@style/SearchActivityEditTextStyle"
                              android:layout_width="match_parent"
                              android:layout_height="wrap_content"/>
                </LinearLayout>
                <LinearLayout android:layout_width="match_parent"
                              android:layout_height="wrap_content"
                              android:orientation="horizontal">
                    <TextView style="@style/SearchAttribute"
                              android:text="@string/staff_search_registration_company"/>
                    <EditText android:id="@+id/company" style="@style/SearchActivityEditTextStyle"
                              android:layout_width="match_parent"
                              android:layout_height="wrap_content"/>
                </LinearLayout>
                <LinearLayout android:layout_width="match_parent"
                              android:layout_height="wrap_content"
                              android:orientation="horizontal">
                    <TextView style="@style/SearchAttribute"
                              android:text="@string/staff_search_registration_id"/>
                    <EditText android:id="@+id/registrationId"
                              style="@style/SearchActivityEditTextStyle"
                              android:layout_width="match_parent"
                              android:layout_height="wrap_content"/>
                </LinearLayout>
                <LinearLayout android:layout_width="match_parent"
                              android:layout_height="wrap_content"
                              android:orientation="horizontal">
                    <TextView style="@style/SearchAttribute"
                              android:text="@string/staff_search_gender"/>
                    <EditText android:id="@+id/gender"
                              style="@style/SearchActivityEditTextStyle"
                              android:layout_width="match_parent"
                              android:layout_height="wrap_content"/>
                </LinearLayout>
                <LinearLayout android:layout_width="match_parent"
                              android:layout_height="wrap_content"
                              android:orientation="horizontal">
                    <TextView style="@style/SearchAttribute"
                              android:text="@string/staff_search_type"/>
                    <EditText android:id="@+id/type"
                              style="@style/SearchActivityEditTextStyle"
                              android:layout_width="match_parent"
                              android:layout_height="wrap_content"/>
                </LinearLayout>
            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:layout_marginTop="20dp"
                android:text="@string/detail_order"
                android:textSize="18sp"/>

            <LinearLayout android:layout_width="match_parent"
                          android:layout_height="wrap_content"
                          android:orientation="vertical"
                          android:paddingEnd="10dp"
                          android:paddingStart="10dp">
                <com.johnson.tender.view.DragListView
                    android:id="@+id/dragListView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                </com.johnson.tender.view.DragListView>
            </LinearLayout>
        </LinearLayout>
    </RelativeLayout>
</layout>
